--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/meep.png" size="16x16"/>
+    <link rel="icon" type="image/svg+xml" href="/logo.png" size="16x16"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meep</title>
+    <title>Sumyournote</title>
   </head>
   <body>
     <div id="root"></div>
